# Efficient_Preamble_Detection_and_ToA_Estimation_for_Single-Tone_Frequency_Hopping_RA_in_NB-IoT

./: NPRACHDetectionExample.m  README.md  hNPRACHDetect.m  lteNPRACHInfo.m  pyproject.toml
results/: calibrated_threshold.json  correction_pass_summary.md  correction_threshold_diagnostic.json  detection_example_result_calibrated.json  false_alarm_result_calibrated.json  heavy_false_alarm_summary.md  paper_sweep_detection_correction_pass.json
results/.matplotlib/: fontlist-v390.json
scripts/: run_nprach_detection_example.py  run_nprach_false_alarm.py  run_nprach_paper_sweep.py  run_nprach_threshold_calibration.py
src/nprach_repro/: __init__.py  config.py  detector_mincomb.py  hopping.py  nprach_info.py  nprach_simulation.py  nprach_waveform.py  threshold_calibration.py  utils.py
